[package]
name = "nats-source"
version = "0.0.0"
edition = "2021"
publish = false
license = "Apache 2.0"
description = "Fluvio Nats source connector"

[dependencies]
anyhow = { version = "1.0" }
async-nats = "0.39.0"
async-std = { version = "1.12",  default-features = false, features = ["attributes", "tokio1"]}
async-trait = { version = "0.1", default-features = false}
futures = { version = "0.3", default-features = false}
serde = {version = "1.0", default-features = false, features = ["derive"]}
serde_json = { version = "1.0", default-features = false, features = ["preserve_order"] }
thiserror = { version = "2.0", default-features = false }
url = { version = "2.5", default-features = false }

fluvio = { git = "https://github.com/infinyon/fluvio", tag = "v0.16.1" }
fluvio-connector-common = { git = "https://github.com/infinyon/fluvio", tag = "v0.16.1", features = ["derive"] }
fluvio-future = { version = "0.7", default-features = false, features = ["rust_tls"] }

[profile.release-lto]
inherits = "release"
lto = true
